# hello_rust

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
playground/: Cargo.toml
playground/src/: iter.rs  lib.rs  main.rs  structs.rs
playground/src/datastructure/: common.rs
src/: closures.rs  enums.rs  error_handling.rs  games.rs  generics.rs  lib.rs  lifetime.rs  main.rs  slice.rs  structs.rs
src/datastructure/: common.rs
tests/: lib.rs
