[package]
name = "hello_rust"
version = "0.0.1"
authors = ["Prajwal Tuladhar <praj@infynyxx.com>"]

[dependencies]
rand = "0.7"
log = "0.4.8"
tokio = { version = "0.2.20", features = ["full"] }
futures = "0.3.4"
tempfile = "3"
assert_approx_eq = "1.1.0"

# https://doc.rust-lang.org/book/ch14-01-release-profiles.html
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3